# asi-labs

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/cuda/: devcontainer.json
labs/: 01_Bayesian_Linear_Regression.ipynb  02_Classification_with_MCMC.ipynb  03_Classification_with_VI.ipynb
tutorials/: 01_Tutorial_Python.ipynb  02_Tutorial_JAX.ipynb
