[project]
name = "asi-labs-private"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "flax>=0.10.6",
    "graphviz>=0.21",
    "ipykernel>=7.0.0a0",
    "ipython>=8.31.0",
    "ipywidgets>=8.1.5",
    "jax>=0.5.0",
    "jaxlib>=0.5.3",
    "jupytext>=1.17.2",
    "matplotlib>=3.10.0",
    "numpy>=2",
    "numpyro>=0.19.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow-probability>=0.25.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
cuda = [
    "jax[cuda]>=0.6.2",
]
